Fix flex spacing

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ li {
 }
 section {
 	width: 100%;
+	height: 50vh;
 	padding: 0 5%;
 	display: table;
 	margin: 0;
